--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -55,3 +55,4 @@
 .icon-camera:before { content: '\e835'; } /* '' */
 .icon-info-1:before { content: '\e836'; } /* '' */
 .icon-users:before { content: '\e837'; } /* '' */
+.icon-newspaper-1:before { content: '\e838'; } /* '' */
