--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?43230930');
-  src: url('../font/fontello.eot?43230930#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?43230930') format('woff'),
-       url('../font/fontello.ttf?43230930') format('truetype'),
-       url('../font/fontello.svg?43230930#fontello') format('svg');
+  src: url('../font/fontello.eot?60435806');
+  src: url('../font/fontello.eot?60435806#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?60435806') format('woff'),
+       url('../font/fontello.ttf?60435806') format('truetype'),
+       url('../font/fontello.svg?60435806#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?43230930#fontello') format('svg');
+    src: url('../font/fontello.svg?60435806#fontello') format('svg');
   }
 }
 */
@@ -110,3 +110,4 @@
 .icon-camera:before { content: '\e835'; } /* '' */
 .icon-info-1:before { content: '\e836'; } /* '' */
 .icon-users:before { content: '\e837'; } /* '' */
+.icon-newspaper-1:before { content: '\e838'; } /* '' */
