fontello library updated

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -56,3 +56,4 @@
 .icon-info-1:before { content: '\e836'; } /* '' */
 .icon-users:before { content: '\e837'; } /* '' */
 .icon-newspaper-1:before { content: '\e838'; } /* '' */
+.icon-pound:before { content: '\e839'; } /* '' */
