library update fontello

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -57,3 +57,4 @@
 .icon-users:before { content: '\e837'; } /* '' */
 .icon-newspaper-1:before { content: '\e838'; } /* '' */
 .icon-pound:before { content: '\e839'; } /* '' */
+.icon-back:before { content: '\e83a'; } /* '' */
