--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?25186770');
-  src: url('../font/fontello.eot?25186770#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?25186770') format('woff'),
-       url('../font/fontello.ttf?25186770') format('truetype'),
-       url('../font/fontello.svg?25186770#fontello') format('svg');
+  src: url('../font/fontello.eot?72046133');
+  src: url('../font/fontello.eot?72046133#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?72046133') format('woff'),
+       url('../font/fontello.ttf?72046133') format('truetype'),
+       url('../font/fontello.svg?72046133#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?25186770#fontello') format('svg');
+    src: url('../font/fontello.svg?72046133#fontello') format('svg');
   }
 }
 */
@@ -112,3 +112,4 @@
 .icon-users:before { content: '\e837'; } /* '' */
 .icon-newspaper-1:before { content: '\e838'; } /* '' */
 .icon-pound:before { content: '\e839'; } /* '' */
+.icon-back:before { content: '\e83a'; } /* '' */
