--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -20,6 +20,7 @@
 @import "components/Views_All_BlogsAndNews";
 @import "components/Views_Social_Icons";
 @import "components/Wttoc_calendar";
+@import "components/Views_One_BlogNews";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
