--- a/sites/all/themes/wttoc/sass/components/Views_All_BlogsAndNews.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_All_BlogsAndNews.scss
@@ -133,7 +133,7 @@
 		}
 	}
 }
-body.page-posts{
+body.page-posts, body.node-type-blog-post{
 	.l-region--sidebar-first, .l-region--sidebar-second{
 		.block__title{
 			margin: 10px 0 8px 0;
