--- a/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
@@ -168,9 +168,11 @@
 					line-height:1.5em;
 					ol, ol li{
 						list-style: decimal;
+						margin-left:20px;
 					}
 					ul, ul li{
-						list-style: circle;
+						list-style: disc;
+						margin-left:20px;
 					}
 				}
 			}
