--- a/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
@@ -174,6 +174,10 @@
 						list-style: disc;
 						margin-left:20px;
 					}
+					p, ul, ol, h1,h2,h3,h4,h5{
+						margin-top:10px;
+						margin-bottom:10px;
+					}
 				}
 			}
 		}
