fontello library update

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -58,3 +58,7 @@
 .icon-newspaper-1:before { content: '\e838'; } /* '' */
 .icon-pound:before { content: '\e839'; } /* '' */
 .icon-back:before { content: '\e83a'; } /* '' */
+.icon-instagram:before { content: '\e83b'; } /* '' */
+.icon-videocam:before { content: '\e83c'; } /* '' */
+.icon-rss:before { content: '\e83d'; } /* '' */
+.icon-rss-squared:before { content: '\e83e'; } /* '' */
