--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?72046133');
-  src: url('../font/fontello.eot?72046133#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?72046133') format('woff'),
-       url('../font/fontello.ttf?72046133') format('truetype'),
-       url('../font/fontello.svg?72046133#fontello') format('svg');
+  src: url('../font/fontello.eot?96984380');
+  src: url('../font/fontello.eot?96984380#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?96984380') format('woff'),
+       url('../font/fontello.ttf?96984380') format('truetype'),
+       url('../font/fontello.svg?96984380#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?72046133#fontello') format('svg');
+    src: url('../font/fontello.svg?96984380#fontello') format('svg');
   }
 }
 */
@@ -113,3 +113,7 @@
 .icon-newspaper-1:before { content: '\e838'; } /* '' */
 .icon-pound:before { content: '\e839'; } /* '' */
 .icon-back:before { content: '\e83a'; } /* '' */
+.icon-instagram:before { content: '\e83b'; } /* '' */
+.icon-videocam:before { content: '\e83c'; } /* '' */
+.icon-rss:before { content: '\e83d'; } /* '' */
+.icon-rss-squared:before { content: '\e83e'; } /* '' */
